# uv-template

./: .pre-commit-config.yaml  .prettierrc  Makefile  README.md  commitlint.config.js  lefthook.yaml  mise.toml  pyproject.toml
notebook/: sample.ipynb
